# pvapp

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
PV System Analyser/: Project Workflow.md
PV System Analyser/.obsidian/: workspace.json
data/0/: arrays.json  grid.json  plant.json
data/1/: plant.json  site.json
docs/: How to build a plant.md  Programmer philosophy.md  Quick Start Guide.md
docs/For developers/: Programmer philosophy.md
docs/GUI/: Guide for developers.md  Guide for users.md
docs/Graphic User Interface Guide/: Guide for developers.md  Guide for users.md
docs/PVLib Package/: pvlib.md  pvlib_params.md
docs/PandaPoewer Package/: pandapower_params.md
docs/PandaPower Package/: pandapower.md  pandapower_params.md
docs/Simulation/: Simulator class.md  output.md  results.md  simulation.md
garbage/: old.json
notebooks/: rete.json
src/documentation/: docbuilder.py
src/pvapp/: main.py
src/pvapp/PVPlantManager/: pvplantmanager.py
src/pvapp/analysis/: database.py  plantanalyser.py
src/pvapp/backend/PVPlantManager/: pvplantmanager.py
src/pvapp/backend/pandapower_network/: TypedDict_elements_params.py  pvnetwork.py
src/pvapp/backend/pvlib_plant_model/: __init__.py  modelchain.py  plant.py  site.py
src/pvapp/backend/simulation/: nature.py  simulator.py
src/pvapp/gui/: gui.py  maingui.py
src/pvapp/gui/i18n/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  ru.json  zh.json
src/pvapp/gui/pages/: page.py
src/pvapp/gui/pages/guide/: guide.py
src/pvapp/gui/pages/home/: home.py
src/pvapp/gui/pages/logs/: logs.py
src/pvapp/gui/pages/plant_manager/: plant_manager.py
src/pvapp/gui/pages/plants/: plants.py
src/pvapp/gui/pages/plants_comparison/: plants_comparison.py
src/pvapp/gui/utils/graphics/: feedback_form.py  md_render.py
src/pvapp/gui/utils/plots/: __init__.py  plots.py
src/pvapp/gui/utils/translation/: traslator.py
src/pvapp/pandapower_network/: TypedDict_elements_params.py  pvnetwork.py
src/pvapp/pvlib_plant_model/: plant.py  site.py
src/pvapp/simulation/: nature.py  simulator.py
src/pvapp/tools/: logger.py
src/pvapp/tools/documentation/: docbuilder.py
src/pvapp/utils/: logger.py  plant_results_visualizer.py
src/solartracker/: main.py
src/solartracker/PVPlantManager/: pvplantmanager.py
src/solartracker/analysis/: analyser.py  database.py  implantanalyser.py
src/solartracker/gui/: inputs.py  layout.py  maingui.py  plots.py
src/solartracker/gui/i18n/: en.json  it.json
src/solartracker/gui/pages/: home.py  implant_performance.py  implants.py  implants_comparison.py  page.py
src/solartracker/gui/pages/beta/: network_classes.py
src/solartracker/gui/pages/guide/: guide.py
src/solartracker/gui/pages/home/: home.py
src/solartracker/gui/pages/implant_performance/: implant_performance.py
src/solartracker/gui/pages/implants/: implants.py
src/solartracker/gui/pages/implants_comparison/: implants_comparison.py
src/solartracker/gui/pages/logs/: logs.py
src/solartracker/gui/pages/plant_manager/: grid.py  module.py  plant_manager.py  site.py
src/solartracker/gui/pages/support/: add_implant.py  (+2 more)
src/solartracker/gui/style/: style.css
src/solartracker/implant_model/: implant.py  modelchain.py  nature.py  site.py
src/solartracker/mount/: custommount.py
src/solartracker/mount/validated/: custommount.py
src/solartracker/pandapower_network/: TypedDict_elements_params.py  pvnetwork.py
src/solartracker/pvlib_implant_model/: implant.py  modelchain.py  site.py
src/solartracker/simulation/: nature.py  simulator.py
src/solartracker/simulator/: simulator.py
src/solartracker/utils/: implant_results_visualizer.py  logger.py
src/utils/: logger.py
(+25 files in other folders)
