[project]
name = "solartracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorenz2001",email = "pepa.lorenzo.01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pvlib (>=0.13.0,<0.14.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)"
]

[tool.poetry]
packages = [{include = "solartracker", from = "src"}]


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pdoc = "^15.0.4"
ruff = "^0.12.2"
pytest-cov = "^6.2.1"
notebook = "^7.4.4"
ipykernel = "^6.29.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
