[tool.poetry]
name = "pvapp"
version = "0.1.0"
description = "An academic PV systems & grids simulator based on pvlib and pandapower with a Streamlit GUI."
authors = ["Lorenzo Pepa <pepalorenzo.work@gmail.com>"]
packages = [{ include = "pvapp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = ">=2.3.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
pvlib = ">=0.13.0,<0.14.0"
seaborn = ">=0.13.2,<0.14.0"
streamlit = ">=1.46.1,<2.0.0"
plotly = ">=6.2.0,<7.0.0"
streamlit-option-menu = ">=0.4.0,<0.5.0"
geopy = ">=2.4.1,<3.0.0"
streamlit-custom-notification-box = ">=0.1.2,<0.2.0"
pyvis = ">=0.3.2,<0.4.0"
streamlit-elements = "==0.1.*"
streamlit-card = ">=1.0.2,<2.0.0"
extra-streamlit-components = ">=0.1.80,<0.2.0"
streamlit-antd-components = ">=0.3.2,<0.4.0"
pandapower = {version=">=3.1.2,<4.0.0", extras=["all"]}
bidict = ">=0.23.1,<0.24.0"
streamlit-autorefresh = ">=1.0.1,<2.0.0"
markdown = ">=3.8.2,<4.0.0"
pygments = ">=2.19.2,<3.0.0"
weasyprint = ">=66.0,<67.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
pdfkit = ">=1.0.0,<2.0.0"
pypandoc = ">=1.15,<2.0"
playwright = ">=1.54.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pdoc = "^15.0.4"
ruff = "^0.12.2"
pytest-cov = "^6.2.1"
notebook = "^7.4.4"
ipykernel = "^6.29.5"
black = "^25.1.0"

[tool.poetry.scripts]
pvapp = "pvapp.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
